# ByteSize

./: CHANGELOG.md  README.md  mkdocs.yaml  pixi.toml  pyproject.toml
.github/workflows/: main.yml
config/: .pypackage-builder-answers.yml  coverage.toml  hatch.toml  pytest.ini  releaserc.toml  ruff.toml
devnotes/: user_stories.md
docs/: parse_files.ipynb
src/bytecase/: __init__.py  bytesize.py  byteunit.py  main.py
src/bytesize/: bytesize.py  byteunit.py
tests/: test_bytesize.py  test_byteunit.py  test_say_hello.py
