#--------------------------------------------------------------------------------------------------#
######################################### Package Config ###########################################
#__________________________________________________________________________________________________#
[project]
name = "pybytesize"
version = "0.2.1"
description = "Smart, Pythonic, and dynamic: automatic unit selection and conversions made intuitive."
license = "MIT"

readme = "README.md"
keywords = ["bytesize", "pixi", "python"]

authors = [{ name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com" }]
maintainers = [{ name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">= 3.10"
dependencies = [
]

[project.urls]
homepage = "https://github.com/jjjermiah/ByteSize"
repository = "https://github.com/jjjermiah/ByteSize"
documentation = "https://jjjermiah.github.io/PyByteSize/"
changelog = "https://github.com/jjjermiah/ByteSize/blob/main/docs/CHANGELOG.md"
issues = "https://github.com/jjjermiah/ByteSize/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]


[tool.hatch.version]
path = "src/bytesize/__init__.py"

[tool.hatch.build]
directory = "dist"
include-package-data = true
reproducible = false

[tool.hatch.build.targets.wheel]
packages = ["src/bytesize"]
include = [
  "src/bytesize",
  "src/bytesize/py.typed"
]

[tool.hatch.build.targets.sdist]
packages = ["src/bytesize"]
include = ["src/bytesize", "src/bytesize/py.typed"]